# vigdec-ui

./: CMakeLists.txt  README.md
ui/: CMakeLists.txt  DecoderThread.cpp  DecoderThread.h  main.cpp
ui/services/: DecoderService.cpp  DecoderService.h
ui/view/: Decoder.qml  Main.qml  Processing.qml  Result.qml
vigdec/: CMakeLists.txt
vigdec/analyzer/: ngram.cpp  utils.cpp
